--- a/ProgettoPW/src/main/webapp/StyleIndex.css
+++ b/ProgettoPW/src/main/webapp/StyleIndex.css
@@ -9,46 +9,32 @@
 
 }
 
-.logo{
-    position:relative;
-    display: inline-block;
-
-    height: 100%;
-    width: auto;
-    z-index:inherit;
-}
-
-.titolo{
+#intestazione{
     position:relative;
 
-    display: inline-block;
-    height: 100%;
-    width: auto;
+    display: flex;
+    justify-content:center;
+
     color: white;
-    text-align: center;
 
-    font-size: 5vh;
     z-index:inherit;
 }
 
 #boxMenu{
-    text-align: center;
-
-    position:absolute;
-    top: 50%;
-    width: 40vw;
-    transform: translateY(-50%);
+    position:relative;
 
     background-color: white;
     z-index:inherit;
 
-    display: inline-flex;
+    display: flex;
     align-items:center;
     justify-content:center;
 
     padding:4px;
-    margin-left:15%;
     height:6vh;
+    width: 50%;
+
+    margin-left: 25%;
 }
 
 .elMenu{
